[tool.poetry]
name = "merge-pdfs"
version = "0.1.0"
description = "Tool for merging PDF files without sending them over the Network"
authors = ["Lukasz Kielar"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pillow = "^10.1.0"
pypdf = "^3.17.3"
pyside6 = "^6.6.1"
qdarkstyle = "^3.2.3"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
